{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 118,
  "lineage": "1e96e301-c7f0-d810-5a98-28cb100c2f2f",
  "resources": [
    {
      "module": "module.inspection_vpc",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "inspection_vpc_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].delegated_account_us-west-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "enable",
            "dns_support": "enable",
            "id": "tgw-attach-01e9aad8e3585245c",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-06a3be525423f0a5c",
              "subnet-06b31f14ed28aa418"
            ],
            "tags": {
              "Name": "inspection-vpc-tgw-attachment"
            },
            "tags_all": {
              "Name": "inspection-vpc-tgw-attachment"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-0092d8da5586c9000",
            "vpc_id": "vpc-0d1c4201696df5274",
            "vpc_owner_id": "980104576742"
          },
          "dependencies": [
            "module.inspection_vpc.aws_subnet.inspection_tgw_subnets",
            "module.inspection_vpc.aws_vpc.inspection_vpc",
            "module.ipam.aws_ram_principal_association.ipam_account_principal",
            "module.ipam.aws_ram_resource_association.ipam_pool_associations",
            "module.ipam.aws_ram_resource_share.ipam_share",
            "module.ipam.aws_vpc_ipam.main_ipam",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region2",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region1",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region2",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region2",
            "module.ipam.aws_vpc_ipam_scope.private_scope",
            "module.tgw.aws_ec2_transit_gateway.tgw",
            "module.vpc.aws_eip.nat_eip_east",
            "module.vpc.aws_eip.nat_eip_west",
            "module.vpc.aws_internet_gateway.igw_east",
            "module.vpc.aws_internet_gateway.igw_west",
            "module.vpc.aws_nat_gateway.nat_gw_east",
            "module.vpc.aws_nat_gateway.nat_gw_west",
            "module.vpc.aws_route_table.private_rt_east",
            "module.vpc.aws_route_table.private_rt_west",
            "module.vpc.aws_route_table.public_rt_east",
            "module.vpc.aws_route_table.public_rt_west",
            "module.vpc.aws_route_table_association.private_rta_east",
            "module.vpc.aws_route_table_association.private_rta_west",
            "module.vpc.aws_route_table_association.public_rta_east",
            "module.vpc.aws_route_table_association.public_rta_west",
            "module.vpc.aws_subnet.subnet_east",
            "module.vpc.aws_subnet.subnet_west",
            "module.vpc.aws_vpc.vpc_east",
            "module.vpc.aws_vpc.vpc_west"
          ]
        }
      ]
    },
    {
      "module": "module.inspection_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].delegated_account_us-west-2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04fe6e2231046dfc8",
            "arn": "arn:aws:ec2:us-west-2:980104576742:elastic-ip/eipalloc-04fe6e2231046dfc8",
            "association_id": "eipassoc-0fdbfb1a9072d9a3f",
            "domain": "vpc",
            "id": "eipalloc-04fe6e2231046dfc8",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0a2b3b373074a2f82",
            "private_dns": "ip-10-0-16-13.us-west-2.compute.internal",
            "private_ip": "10.0.16.13",
            "public_dns": "ec2-54-218-158-132.us-west-2.compute.amazonaws.com",
            "public_ip": "54.218.158.132",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "security",
              "ManagedBy": "terraform",
              "Name": "inspection-nat-eip-a"
            },
            "tags_all": {
              "Environment": "security",
              "ManagedBy": "terraform",
              "Name": "inspection-nat-eip-a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.ipam.aws_ram_principal_association.ipam_account_principal",
            "module.ipam.aws_ram_resource_association.ipam_pool_associations",
            "module.ipam.aws_ram_resource_share.ipam_share",
            "module.ipam.aws_vpc_ipam.main_ipam",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region2",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region1",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region2",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region2",
            "module.ipam.aws_vpc_ipam_scope.private_scope"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06a2ed094bc3bf848",
            "arn": "arn:aws:ec2:us-west-2:980104576742:elastic-ip/eipalloc-06a2ed094bc3bf848",
            "association_id": "eipassoc-00e44fa00e84d368e",
            "domain": "vpc",
            "id": "eipalloc-06a2ed094bc3bf848",
            "network_border_group": "us-west-2",
            "network_interface": "eni-089ea20b37c1bdfe7",
            "private_dns": "ip-10-0-16-57.us-west-2.compute.internal",
            "private_ip": "10.0.16.57",
            "public_dns": "ec2-44-227-231-32.us-west-2.compute.amazonaws.com",
            "public_ip": "44.227.231.32",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "security",
              "ManagedBy": "terraform",
              "Name": "inspection-nat-eip-b"
            },
            "tags_all": {
              "Environment": "security",
              "ManagedBy": "terraform",
              "Name": "inspection-nat-eip-b"
            },
            "vpc": true
          },
          "dependencies": [
            "module.ipam.aws_ram_principal_association.ipam_account_principal",
            "module.ipam.aws_ram_resource_association.ipam_pool_associations",
            "module.ipam.aws_ram_resource_share.ipam_share",
            "module.ipam.aws_vpc_ipam.main_ipam",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region2",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region1",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region2",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region2",
            "module.ipam.aws_vpc_ipam_scope.private_scope"
          ]
        }
      ]
    },
    {
      "module": "module.inspection_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "inspection_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].delegated_account_us-west-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:980104576742:internet-gateway/igw-0cd5239398e1c750b",
            "id": "igw-0cd5239398e1c750b",
            "owner_id": "980104576742",
            "tags": {
              "Environment": "security",
              "ManagedBy": "terraform",
              "Name": "inspection-igw"
            },
            "tags_all": {
              "Environment": "security",
              "ManagedBy": "terraform",
              "Name": "inspection-igw"
            },
            "vpc_id": "vpc-0d1c4201696df5274"
          },
          "dependencies": [
            "module.inspection_vpc.aws_vpc.inspection_vpc",
            "module.ipam.aws_ram_principal_association.ipam_account_principal",
            "module.ipam.aws_ram_resource_association.ipam_pool_associations",
            "module.ipam.aws_ram_resource_share.ipam_share",
            "module.ipam.aws_vpc_ipam.main_ipam",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region2",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region1",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region2",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region2",
            "module.ipam.aws_vpc_ipam_scope.private_scope"
          ]
        }
      ]
    },
    {
      "module": "module.inspection_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "inspection_nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].delegated_account_us-west-2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04fe6e2231046dfc8",
            "association_id": "eipassoc-0fdbfb1a9072d9a3f",
            "connectivity_type": "public",
            "id": "nat-05bdb9730683526bb",
            "network_interface_id": "eni-0a2b3b373074a2f82",
            "private_ip": "10.0.16.13",
            "public_ip": "54.218.158.132",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-053d8797886e068d2",
            "tags": {
              "Environment": "security",
              "ManagedBy": "terraform",
              "Name": "inspection-nat-gw-a"
            },
            "tags_all": {
              "Environment": "security",
              "ManagedBy": "terraform",
              "Name": "inspection-nat-gw-a"
            }
          },
          "dependencies": [
            "module.inspection_vpc.aws_eip.nat_eip",
            "module.inspection_vpc.aws_internet_gateway.inspection_igw",
            "module.inspection_vpc.aws_subnet.inspection_public_subnets",
            "module.inspection_vpc.aws_vpc.inspection_vpc",
            "module.ipam.aws_ram_principal_association.ipam_account_principal",
            "module.ipam.aws_ram_resource_association.ipam_pool_associations",
            "module.ipam.aws_ram_resource_share.ipam_share",
            "module.ipam.aws_vpc_ipam.main_ipam",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region2",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region1",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region2",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region2",
            "module.ipam.aws_vpc_ipam_scope.private_scope"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06a2ed094bc3bf848",
            "association_id": "eipassoc-00e44fa00e84d368e",
            "connectivity_type": "public",
            "id": "nat-011208f79e3ba4f9c",
            "network_interface_id": "eni-089ea20b37c1bdfe7",
            "private_ip": "10.0.16.57",
            "public_ip": "44.227.231.32",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-060df9a83fa9daa2c",
            "tags": {
              "Environment": "security",
              "ManagedBy": "terraform",
              "Name": "inspection-nat-gw-b"
            },
            "tags_all": {
              "Environment": "security",
              "ManagedBy": "terraform",
              "Name": "inspection-nat-gw-b"
            }
          },
          "dependencies": [
            "module.inspection_vpc.aws_eip.nat_eip",
            "module.inspection_vpc.aws_internet_gateway.inspection_igw",
            "module.inspection_vpc.aws_subnet.inspection_public_subnets",
            "module.inspection_vpc.aws_vpc.inspection_vpc",
            "module.ipam.aws_ram_principal_association.ipam_account_principal",
            "module.ipam.aws_ram_resource_association.ipam_pool_associations",
            "module.ipam.aws_ram_resource_share.ipam_share",
            "module.ipam.aws_vpc_ipam.main_ipam",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region2",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region1",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region2",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region2",
            "module.ipam.aws_vpc_ipam_scope.private_scope"
          ]
        }
      ]
    },
    {
      "module": "module.inspection_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].delegated_account_us-west-2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0441b555d23e054981080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-05bdb9730683526bb",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0441b555d23e05498",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.inspection_vpc.aws_eip.nat_eip",
            "module.inspection_vpc.aws_internet_gateway.inspection_igw",
            "module.inspection_vpc.aws_nat_gateway.inspection_nat_gw",
            "module.inspection_vpc.aws_route_table.inspection_private_rt",
            "module.inspection_vpc.aws_subnet.inspection_public_subnets",
            "module.inspection_vpc.aws_vpc.inspection_vpc",
            "module.ipam.aws_ram_principal_association.ipam_account_principal",
            "module.ipam.aws_ram_resource_association.ipam_pool_associations",
            "module.ipam.aws_ram_resource_share.ipam_share",
            "module.ipam.aws_vpc_ipam.main_ipam",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region2",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region1",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region2",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region2",
            "module.ipam.aws_vpc_ipam_scope.private_scope"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-050840f24b41a22be1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-011208f79e3ba4f9c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-050840f24b41a22be",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.inspection_vpc.aws_eip.nat_eip",
            "module.inspection_vpc.aws_internet_gateway.inspection_igw",
            "module.inspection_vpc.aws_nat_gateway.inspection_nat_gw",
            "module.inspection_vpc.aws_route_table.inspection_private_rt",
            "module.inspection_vpc.aws_subnet.inspection_public_subnets",
            "module.inspection_vpc.aws_vpc.inspection_vpc",
            "module.ipam.aws_ram_principal_association.ipam_account_principal",
            "module.ipam.aws_ram_resource_association.ipam_pool_associations",
            "module.ipam.aws_ram_resource_share.ipam_share",
            "module.ipam.aws_vpc_ipam.main_ipam",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region2",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region1",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region2",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region2",
            "module.ipam.aws_vpc_ipam_scope.private_scope"
          ]
        }
      ]
    },
    {
      "module": "module.inspection_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].delegated_account_us-west-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0cd5239398e1c750b",
            "id": "r-rtb-0c737b25d4448580c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c737b25d4448580c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.inspection_vpc.aws_internet_gateway.inspection_igw",
            "module.inspection_vpc.aws_route_table.inspection_public_rt",
            "module.inspection_vpc.aws_vpc.inspection_vpc",
            "module.ipam.aws_ram_principal_association.ipam_account_principal",
            "module.ipam.aws_ram_resource_association.ipam_pool_associations",
            "module.ipam.aws_ram_resource_share.ipam_share",
            "module.ipam.aws_vpc_ipam.main_ipam",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region2",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region1",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region2",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region2",
            "module.ipam.aws_vpc_ipam_scope.private_scope"
          ]
        }
      ]
    },
    {
      "module": "module.inspection_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "inspection_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].delegated_account_us-west-2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:980104576742:route-table/rtb-0441b555d23e05498",
            "id": "rtb-0441b555d23e05498",
            "owner_id": "980104576742",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05bdb9730683526bb",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "security",
              "ManagedBy": "terraform",
              "Name": "inspection-private-rt-a",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "security",
              "ManagedBy": "terraform",
              "Name": "inspection-private-rt-a",
              "Tier": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d1c4201696df5274"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.inspection_vpc.aws_vpc.inspection_vpc",
            "module.ipam.aws_ram_principal_association.ipam_account_principal",
            "module.ipam.aws_ram_resource_association.ipam_pool_associations",
            "module.ipam.aws_ram_resource_share.ipam_share",
            "module.ipam.aws_vpc_ipam.main_ipam",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region2",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region1",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region2",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region2",
            "module.ipam.aws_vpc_ipam_scope.private_scope"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:980104576742:route-table/rtb-050840f24b41a22be",
            "id": "rtb-050840f24b41a22be",
            "owner_id": "980104576742",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-011208f79e3ba4f9c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "security",
              "ManagedBy": "terraform",
              "Name": "inspection-private-rt-b",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "security",
              "ManagedBy": "terraform",
              "Name": "inspection-private-rt-b",
              "Tier": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d1c4201696df5274"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.inspection_vpc.aws_vpc.inspection_vpc",
            "module.ipam.aws_ram_principal_association.ipam_account_principal",
            "module.ipam.aws_ram_resource_association.ipam_pool_associations",
            "module.ipam.aws_ram_resource_share.ipam_share",
            "module.ipam.aws_vpc_ipam.main_ipam",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region2",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region1",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region2",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region2",
            "module.ipam.aws_vpc_ipam_scope.private_scope"
          ]
        }
      ]
    },
    {
      "module": "module.inspection_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "inspection_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].delegated_account_us-west-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:980104576742:route-table/rtb-0c737b25d4448580c",
            "id": "rtb-0c737b25d4448580c",
            "owner_id": "980104576742",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cd5239398e1c750b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "security",
              "ManagedBy": "terraform",
              "Name": "inspection-public-rt",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "security",
              "ManagedBy": "terraform",
              "Name": "inspection-public-rt",
              "Tier": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d1c4201696df5274"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.inspection_vpc.aws_vpc.inspection_vpc",
            "module.ipam.aws_ram_principal_association.ipam_account_principal",
            "module.ipam.aws_ram_resource_association.ipam_pool_associations",
            "module.ipam.aws_ram_resource_share.ipam_share",
            "module.ipam.aws_vpc_ipam.main_ipam",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region2",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region1",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region2",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region2",
            "module.ipam.aws_vpc_ipam_scope.private_scope"
          ]
        }
      ]
    },
    {
      "module": "module.inspection_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].delegated_account_us-west-2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00a3fc457ca76c345",
            "route_table_id": "rtb-0441b555d23e05498",
            "subnet_id": "subnet-0e8a33b5dabef030f"
          },
          "dependencies": [
            "module.inspection_vpc.aws_route_table.inspection_private_rt",
            "module.inspection_vpc.aws_subnet.inspection_private_subnets",
            "module.inspection_vpc.aws_vpc.inspection_vpc",
            "module.ipam.aws_ram_principal_association.ipam_account_principal",
            "module.ipam.aws_ram_resource_association.ipam_pool_associations",
            "module.ipam.aws_ram_resource_share.ipam_share",
            "module.ipam.aws_vpc_ipam.main_ipam",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region2",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region1",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region2",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region2",
            "module.ipam.aws_vpc_ipam_scope.private_scope"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e5d03392af98c7ac",
            "route_table_id": "rtb-050840f24b41a22be",
            "subnet_id": "subnet-0775797030e9f4c68"
          },
          "dependencies": [
            "module.inspection_vpc.aws_route_table.inspection_private_rt",
            "module.inspection_vpc.aws_subnet.inspection_private_subnets",
            "module.inspection_vpc.aws_vpc.inspection_vpc",
            "module.ipam.aws_ram_principal_association.ipam_account_principal",
            "module.ipam.aws_ram_resource_association.ipam_pool_associations",
            "module.ipam.aws_ram_resource_share.ipam_share",
            "module.ipam.aws_vpc_ipam.main_ipam",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region2",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region1",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region2",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region2",
            "module.ipam.aws_vpc_ipam_scope.private_scope"
          ]
        }
      ]
    },
    {
      "module": "module.inspection_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].delegated_account_us-west-2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-000a8c6e579caac29",
            "route_table_id": "rtb-0c737b25d4448580c",
            "subnet_id": "subnet-053d8797886e068d2"
          },
          "dependencies": [
            "module.inspection_vpc.aws_route_table.inspection_public_rt",
            "module.inspection_vpc.aws_subnet.inspection_public_subnets",
            "module.inspection_vpc.aws_vpc.inspection_vpc",
            "module.ipam.aws_ram_principal_association.ipam_account_principal",
            "module.ipam.aws_ram_resource_association.ipam_pool_associations",
            "module.ipam.aws_ram_resource_share.ipam_share",
            "module.ipam.aws_vpc_ipam.main_ipam",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region2",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region1",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region2",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region2",
            "module.ipam.aws_vpc_ipam_scope.private_scope"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00beed1e1ac1c0883",
            "route_table_id": "rtb-0c737b25d4448580c",
            "subnet_id": "subnet-060df9a83fa9daa2c"
          },
          "dependencies": [
            "module.inspection_vpc.aws_route_table.inspection_public_rt",
            "module.inspection_vpc.aws_subnet.inspection_public_subnets",
            "module.inspection_vpc.aws_vpc.inspection_vpc",
            "module.ipam.aws_ram_principal_association.ipam_account_principal",
            "module.ipam.aws_ram_resource_association.ipam_pool_associations",
            "module.ipam.aws_ram_resource_share.ipam_share",
            "module.ipam.aws_vpc_ipam.main_ipam",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region2",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region1",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region2",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region2",
            "module.ipam.aws_vpc_ipam_scope.private_scope"
          ]
        }
      ]
    },
    {
      "module": "module.inspection_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "inspection_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].delegated_account_us-west-2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:980104576742:subnet/subnet-0e8a33b5dabef030f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.16.64/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e8a33b5dabef030f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "980104576742",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "security",
              "ManagedBy": "terraform",
              "Name": "inspection-private-a",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "security",
              "ManagedBy": "terraform",
              "Name": "inspection-private-a",
              "Tier": "private"
            },
            "vpc_id": "vpc-0d1c4201696df5274"
          },
          "dependencies": [
            "module.inspection_vpc.aws_vpc.inspection_vpc",
            "module.ipam.aws_ram_principal_association.ipam_account_principal",
            "module.ipam.aws_ram_resource_association.ipam_pool_associations",
            "module.ipam.aws_ram_resource_share.ipam_share",
            "module.ipam.aws_vpc_ipam.main_ipam",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region2",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region1",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region2",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region2",
            "module.ipam.aws_vpc_ipam_scope.private_scope"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:980104576742:subnet/subnet-0775797030e9f4c68",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.16.96/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0775797030e9f4c68",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "980104576742",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "security",
              "ManagedBy": "terraform",
              "Name": "inspection-private-b",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "security",
              "ManagedBy": "terraform",
              "Name": "inspection-private-b",
              "Tier": "private"
            },
            "vpc_id": "vpc-0d1c4201696df5274"
          },
          "dependencies": [
            "module.inspection_vpc.aws_vpc.inspection_vpc",
            "module.ipam.aws_ram_principal_association.ipam_account_principal",
            "module.ipam.aws_ram_resource_association.ipam_pool_associations",
            "module.ipam.aws_ram_resource_share.ipam_share",
            "module.ipam.aws_vpc_ipam.main_ipam",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region2",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region1",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region2",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region2",
            "module.ipam.aws_vpc_ipam_scope.private_scope"
          ]
        }
      ]
    },
    {
      "module": "module.inspection_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "inspection_public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].delegated_account_us-west-2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:980104576742:subnet/subnet-053d8797886e068d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.16.0/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-053d8797886e068d2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "980104576742",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "security",
              "ManagedBy": "terraform",
              "Name": "inspection-public-a",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "security",
              "ManagedBy": "terraform",
              "Name": "inspection-public-a",
              "Tier": "public"
            },
            "vpc_id": "vpc-0d1c4201696df5274"
          },
          "dependencies": [
            "module.inspection_vpc.aws_vpc.inspection_vpc",
            "module.ipam.aws_ram_principal_association.ipam_account_principal",
            "module.ipam.aws_ram_resource_association.ipam_pool_associations",
            "module.ipam.aws_ram_resource_share.ipam_share",
            "module.ipam.aws_vpc_ipam.main_ipam",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region2",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region1",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region2",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region2",
            "module.ipam.aws_vpc_ipam_scope.private_scope"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:980104576742:subnet/subnet-060df9a83fa9daa2c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.16.32/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-060df9a83fa9daa2c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "980104576742",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "security",
              "ManagedBy": "terraform",
              "Name": "inspection-public-b",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "security",
              "ManagedBy": "terraform",
              "Name": "inspection-public-b",
              "Tier": "public"
            },
            "vpc_id": "vpc-0d1c4201696df5274"
          },
          "dependencies": [
            "module.inspection_vpc.aws_vpc.inspection_vpc",
            "module.ipam.aws_ram_principal_association.ipam_account_principal",
            "module.ipam.aws_ram_resource_association.ipam_pool_associations",
            "module.ipam.aws_ram_resource_share.ipam_share",
            "module.ipam.aws_vpc_ipam.main_ipam",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region2",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region1",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region2",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region2",
            "module.ipam.aws_vpc_ipam_scope.private_scope"
          ]
        }
      ]
    },
    {
      "module": "module.inspection_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "inspection_tgw_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].delegated_account_us-west-2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:980104576742:subnet/subnet-06b31f14ed28aa418",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.16.128/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06b31f14ed28aa418",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "980104576742",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "security",
              "ManagedBy": "terraform",
              "Name": "inspection-tgw-a",
              "Tier": "tgw"
            },
            "tags_all": {
              "Environment": "security",
              "ManagedBy": "terraform",
              "Name": "inspection-tgw-a",
              "Tier": "tgw"
            },
            "vpc_id": "vpc-0d1c4201696df5274"
          },
          "dependencies": [
            "module.inspection_vpc.aws_vpc.inspection_vpc",
            "module.ipam.aws_ram_principal_association.ipam_account_principal",
            "module.ipam.aws_ram_resource_association.ipam_pool_associations",
            "module.ipam.aws_ram_resource_share.ipam_share",
            "module.ipam.aws_vpc_ipam.main_ipam",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region2",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region1",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region2",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region2",
            "module.ipam.aws_vpc_ipam_scope.private_scope"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:980104576742:subnet/subnet-06a3be525423f0a5c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.16.160/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06a3be525423f0a5c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "980104576742",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "security",
              "ManagedBy": "terraform",
              "Name": "inspection-tgw-b",
              "Tier": "tgw"
            },
            "tags_all": {
              "Environment": "security",
              "ManagedBy": "terraform",
              "Name": "inspection-tgw-b",
              "Tier": "tgw"
            },
            "vpc_id": "vpc-0d1c4201696df5274"
          },
          "dependencies": [
            "module.inspection_vpc.aws_vpc.inspection_vpc",
            "module.ipam.aws_ram_principal_association.ipam_account_principal",
            "module.ipam.aws_ram_resource_association.ipam_pool_associations",
            "module.ipam.aws_ram_resource_share.ipam_share",
            "module.ipam.aws_vpc_ipam.main_ipam",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region2",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region1",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region2",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region2",
            "module.ipam.aws_vpc_ipam_scope.private_scope"
          ]
        }
      ]
    },
    {
      "module": "module.inspection_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "inspection_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].delegated_account_us-west-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:980104576742:vpc/vpc-0d1c4201696df5274",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.16.0/24",
            "default_network_acl_id": "acl-055553c7859fdf36e",
            "default_route_table_id": "rtb-066a09a331b330df8",
            "default_security_group_id": "sg-041fea15de5853caa",
            "dhcp_options_id": "dopt-03aa8f85fd1cb199c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d1c4201696df5274",
            "instance_tenancy": "default",
            "ipv4_ipam_pool_id": "ipam-pool-0a62c2c9c90b60cf9",
            "ipv4_netmask_length": 24,
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-066a09a331b330df8",
            "owner_id": "980104576742",
            "tags": {
              "Environment": "security",
              "ManagedBy": "terraform",
              "Name": "inspection_vpc"
            },
            "tags_all": {
              "Environment": "security",
              "ManagedBy": "terraform",
              "Name": "inspection_vpc"
            }
          },
          "dependencies": [
            "module.ipam.aws_ram_principal_association.ipam_account_principal",
            "module.ipam.aws_ram_resource_association.ipam_pool_associations",
            "module.ipam.aws_ram_resource_share.ipam_share",
            "module.ipam.aws_vpc_ipam.main_ipam",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region2",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region1",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region2",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region2",
            "module.ipam.aws_vpc_ipam_scope.private_scope"
          ]
        }
      ]
    },
    {
      "module": "module.tgw",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "tgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].delegated_account_us-west-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:us-west-2:980104576742:transit-gateway/tgw-0092d8da5586c9000",
            "association_default_route_table_id": "tgw-rtb-0480eafd08b3fb489",
            "auto_accept_shared_attachments": "enable",
            "default_route_table_association": "enable",
            "default_route_table_propagation": "enable",
            "description": "Transit Gateway us-west-2",
            "dns_support": "enable",
            "id": "tgw-0092d8da5586c9000",
            "multicast_support": "disable",
            "owner_id": "980104576742",
            "propagation_default_route_table_id": "tgw-rtb-0480eafd08b3fb489",
            "tags": {
              "Environment": "shared",
              "ManagedBy": "terraform",
              "Name": "delegated-account-tgw"
            },
            "tags_all": {
              "Environment": "shared",
              "ManagedBy": "terraform",
              "Name": "delegated-account-tgw"
            },
            "vpn_ecmp_support": "enable"
          },
          "dependencies": [
            "module.ipam.aws_ram_principal_association.ipam_account_principal",
            "module.ipam.aws_ram_resource_association.ipam_pool_associations",
            "module.ipam.aws_ram_resource_share.ipam_share",
            "module.ipam.aws_vpc_ipam.main_ipam",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region2",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region1",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region2",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region2",
            "module.ipam.aws_vpc_ipam_scope.private_scope",
            "module.vpc.aws_eip.nat_eip_east",
            "module.vpc.aws_eip.nat_eip_west",
            "module.vpc.aws_internet_gateway.igw_east",
            "module.vpc.aws_internet_gateway.igw_west",
            "module.vpc.aws_nat_gateway.nat_gw_east",
            "module.vpc.aws_nat_gateway.nat_gw_west",
            "module.vpc.aws_route_table.private_rt_east",
            "module.vpc.aws_route_table.private_rt_west",
            "module.vpc.aws_route_table.public_rt_east",
            "module.vpc.aws_route_table.public_rt_west",
            "module.vpc.aws_route_table_association.private_rta_east",
            "module.vpc.aws_route_table_association.private_rta_west",
            "module.vpc.aws_route_table_association.public_rta_east",
            "module.vpc.aws_route_table_association.public_rta_west",
            "module.vpc.aws_subnet.subnet_east",
            "module.vpc.aws_subnet.subnet_west",
            "module.vpc.aws_vpc.vpc_east",
            "module.vpc.aws_vpc.vpc_west"
          ]
        }
      ]
    },
    {
      "module": "module.tgw",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "tgw_east",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].delegated_account_us-east-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64513,
            "arn": "arn:aws:ec2:us-east-1:980104576742:transit-gateway/tgw-0a2bbcb50043ff377",
            "association_default_route_table_id": "tgw-rtb-0ff7ae347d9c9c361",
            "auto_accept_shared_attachments": "enable",
            "default_route_table_association": "enable",
            "default_route_table_propagation": "enable",
            "description": "Transit Gateway us-east-1",
            "dns_support": "enable",
            "id": "tgw-0a2bbcb50043ff377",
            "multicast_support": "disable",
            "owner_id": "980104576742",
            "propagation_default_route_table_id": "tgw-rtb-0ff7ae347d9c9c361",
            "tags": {
              "Environment": "shared",
              "ManagedBy": "terraform",
              "Name": "delegated-account-tgw-east"
            },
            "tags_all": {
              "Environment": "shared",
              "ManagedBy": "terraform",
              "Name": "delegated-account-tgw-east"
            },
            "vpn_ecmp_support": "enable"
          },
          "dependencies": [
            "module.ipam.aws_ram_principal_association.ipam_account_principal",
            "module.ipam.aws_ram_resource_association.ipam_pool_associations",
            "module.ipam.aws_ram_resource_share.ipam_share",
            "module.ipam.aws_vpc_ipam.main_ipam",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region2",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region1",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region2",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region2",
            "module.ipam.aws_vpc_ipam_scope.private_scope",
            "module.vpc.aws_eip.nat_eip_east",
            "module.vpc.aws_eip.nat_eip_west",
            "module.vpc.aws_internet_gateway.igw_east",
            "module.vpc.aws_internet_gateway.igw_west",
            "module.vpc.aws_nat_gateway.nat_gw_east",
            "module.vpc.aws_nat_gateway.nat_gw_west",
            "module.vpc.aws_route_table.private_rt_east",
            "module.vpc.aws_route_table.private_rt_west",
            "module.vpc.aws_route_table.public_rt_east",
            "module.vpc.aws_route_table.public_rt_west",
            "module.vpc.aws_route_table_association.private_rta_east",
            "module.vpc.aws_route_table_association.private_rta_west",
            "module.vpc.aws_route_table_association.public_rta_east",
            "module.vpc.aws_route_table_association.public_rta_west",
            "module.vpc.aws_subnet.subnet_east",
            "module.vpc.aws_subnet.subnet_west",
            "module.vpc.aws_vpc.vpc_east",
            "module.vpc.aws_vpc.vpc_west"
          ]
        }
      ]
    },
    {
      "module": "module.tgw",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_peering_attachment",
      "name": "tgw_peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].delegated_account_us-west-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-attach-0e61635b955536e4d",
            "peer_account_id": "980104576742",
            "peer_region": "us-east-1",
            "peer_transit_gateway_id": "tgw-0a2bbcb50043ff377",
            "state": "available",
            "tags": {
              "Environment": "shared",
              "ManagedBy": "terraform",
              "Name": "tgw-peering-west-to-east"
            },
            "tags_all": {
              "Environment": "shared",
              "ManagedBy": "terraform",
              "Name": "tgw-peering-west-to-east"
            },
            "transit_gateway_id": "tgw-0092d8da5586c9000"
          },
          "dependencies": [
            "module.ipam.aws_ram_principal_association.ipam_account_principal",
            "module.ipam.aws_ram_resource_association.ipam_pool_associations",
            "module.ipam.aws_ram_resource_share.ipam_share",
            "module.ipam.aws_vpc_ipam.main_ipam",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region2",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region1",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region2",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region2",
            "module.ipam.aws_vpc_ipam_scope.private_scope",
            "module.tgw.aws_ec2_transit_gateway.tgw",
            "module.tgw.aws_ec2_transit_gateway.tgw_east",
            "module.vpc.aws_eip.nat_eip_east",
            "module.vpc.aws_eip.nat_eip_west",
            "module.vpc.aws_internet_gateway.igw_east",
            "module.vpc.aws_internet_gateway.igw_west",
            "module.vpc.aws_nat_gateway.nat_gw_east",
            "module.vpc.aws_nat_gateway.nat_gw_west",
            "module.vpc.aws_route_table.private_rt_east",
            "module.vpc.aws_route_table.private_rt_west",
            "module.vpc.aws_route_table.public_rt_east",
            "module.vpc.aws_route_table.public_rt_west",
            "module.vpc.aws_route_table_association.private_rta_east",
            "module.vpc.aws_route_table_association.private_rta_west",
            "module.vpc.aws_route_table_association.public_rta_east",
            "module.vpc.aws_route_table_association.public_rta_west",
            "module.vpc.aws_subnet.subnet_east",
            "module.vpc.aws_subnet.subnet_west",
            "module.vpc.aws_vpc.vpc_east",
            "module.vpc.aws_vpc.vpc_west"
          ]
        }
      ]
    },
    {
      "module": "module.tgw",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_peering_attachment_accepter",
      "name": "tgw_peering_accepter",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].delegated_account_us-east-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-attach-0e61635b955536e4d",
            "peer_account_id": "980104576742",
            "peer_region": "us-west-2",
            "peer_transit_gateway_id": "tgw-0092d8da5586c9000",
            "tags": {
              "Environment": "shared",
              "ManagedBy": "terraform",
              "Name": "tgw-peering-east-to-west-accepter"
            },
            "tags_all": {
              "Environment": "shared",
              "ManagedBy": "terraform",
              "Name": "tgw-peering-east-to-west-accepter"
            },
            "transit_gateway_attachment_id": "tgw-attach-0e61635b955536e4d",
            "transit_gateway_id": "tgw-0a2bbcb50043ff377"
          },
          "dependencies": [
            "module.ipam.aws_ram_principal_association.ipam_account_principal",
            "module.ipam.aws_ram_resource_association.ipam_pool_associations",
            "module.ipam.aws_ram_resource_share.ipam_share",
            "module.ipam.aws_vpc_ipam.main_ipam",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region2",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region1",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region2",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region2",
            "module.ipam.aws_vpc_ipam_scope.private_scope",
            "module.tgw.aws_ec2_transit_gateway.tgw",
            "module.tgw.aws_ec2_transit_gateway.tgw_east",
            "module.tgw.aws_ec2_transit_gateway_peering_attachment.tgw_peering",
            "module.vpc.aws_eip.nat_eip_east",
            "module.vpc.aws_eip.nat_eip_west",
            "module.vpc.aws_internet_gateway.igw_east",
            "module.vpc.aws_internet_gateway.igw_west",
            "module.vpc.aws_nat_gateway.nat_gw_east",
            "module.vpc.aws_nat_gateway.nat_gw_west",
            "module.vpc.aws_route_table.private_rt_east",
            "module.vpc.aws_route_table.private_rt_west",
            "module.vpc.aws_route_table.public_rt_east",
            "module.vpc.aws_route_table.public_rt_west",
            "module.vpc.aws_route_table_association.private_rta_east",
            "module.vpc.aws_route_table_association.private_rta_west",
            "module.vpc.aws_route_table_association.public_rta_east",
            "module.vpc.aws_route_table_association.public_rta_west",
            "module.vpc.aws_subnet.subnet_east",
            "module.vpc.aws_subnet.subnet_west",
            "module.vpc.aws_vpc.vpc_east",
            "module.vpc.aws_vpc.vpc_west"
          ]
        }
      ]
    },
    {
      "module": "module.tgw",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route",
      "name": "east_to_west",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].delegated_account_us-east-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "blackhole": false,
            "destination_cidr_block": "10.0.24.0/21",
            "id": "tgw-rtb-0d04c8d32e1cad85d_10.0.24.0/21",
            "transit_gateway_attachment_id": "tgw-attach-0e61635b955536e4d",
            "transit_gateway_route_table_id": "tgw-rtb-0d04c8d32e1cad85d"
          },
          "dependencies": [
            "module.ipam.aws_ram_principal_association.ipam_account_principal",
            "module.ipam.aws_ram_resource_association.ipam_pool_associations",
            "module.ipam.aws_ram_resource_share.ipam_share",
            "module.ipam.aws_vpc_ipam.main_ipam",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region2",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region1",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region2",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region2",
            "module.ipam.aws_vpc_ipam_scope.private_scope",
            "module.tgw.aws_ec2_transit_gateway.tgw",
            "module.tgw.aws_ec2_transit_gateway.tgw_east",
            "module.tgw.aws_ec2_transit_gateway_peering_attachment.tgw_peering",
            "module.tgw.aws_ec2_transit_gateway_peering_attachment_accepter.tgw_peering_accepter",
            "module.tgw.aws_ec2_transit_gateway_route_table.tgw_rt_east",
            "module.vpc.aws_eip.nat_eip_east",
            "module.vpc.aws_eip.nat_eip_west",
            "module.vpc.aws_internet_gateway.igw_east",
            "module.vpc.aws_internet_gateway.igw_west",
            "module.vpc.aws_nat_gateway.nat_gw_east",
            "module.vpc.aws_nat_gateway.nat_gw_west",
            "module.vpc.aws_route_table.private_rt_east",
            "module.vpc.aws_route_table.private_rt_west",
            "module.vpc.aws_route_table.public_rt_east",
            "module.vpc.aws_route_table.public_rt_west",
            "module.vpc.aws_route_table_association.private_rta_east",
            "module.vpc.aws_route_table_association.private_rta_west",
            "module.vpc.aws_route_table_association.public_rta_east",
            "module.vpc.aws_route_table_association.public_rta_west",
            "module.vpc.aws_subnet.subnet_east",
            "module.vpc.aws_subnet.subnet_west",
            "module.vpc.aws_vpc.vpc_east",
            "module.vpc.aws_vpc.vpc_west"
          ]
        }
      ]
    },
    {
      "module": "module.tgw",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route",
      "name": "west_to_east",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].delegated_account_us-west-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "blackhole": false,
            "destination_cidr_block": "10.1.144.0/21",
            "id": "tgw-rtb-081cb7c577fd302f1_10.1.144.0/21",
            "transit_gateway_attachment_id": "tgw-attach-0e61635b955536e4d",
            "transit_gateway_route_table_id": "tgw-rtb-081cb7c577fd302f1"
          },
          "dependencies": [
            "module.ipam.aws_ram_principal_association.ipam_account_principal",
            "module.ipam.aws_ram_resource_association.ipam_pool_associations",
            "module.ipam.aws_ram_resource_share.ipam_share",
            "module.ipam.aws_vpc_ipam.main_ipam",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region2",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region1",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region2",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region2",
            "module.ipam.aws_vpc_ipam_scope.private_scope",
            "module.tgw.aws_ec2_transit_gateway.tgw",
            "module.tgw.aws_ec2_transit_gateway.tgw_east",
            "module.tgw.aws_ec2_transit_gateway_peering_attachment.tgw_peering",
            "module.tgw.aws_ec2_transit_gateway_peering_attachment_accepter.tgw_peering_accepter",
            "module.tgw.aws_ec2_transit_gateway_route_table.tgw_rt",
            "module.vpc.aws_eip.nat_eip_east",
            "module.vpc.aws_eip.nat_eip_west",
            "module.vpc.aws_internet_gateway.igw_east",
            "module.vpc.aws_internet_gateway.igw_west",
            "module.vpc.aws_nat_gateway.nat_gw_east",
            "module.vpc.aws_nat_gateway.nat_gw_west",
            "module.vpc.aws_route_table.private_rt_east",
            "module.vpc.aws_route_table.private_rt_west",
            "module.vpc.aws_route_table.public_rt_east",
            "module.vpc.aws_route_table.public_rt_west",
            "module.vpc.aws_route_table_association.private_rta_east",
            "module.vpc.aws_route_table_association.private_rta_west",
            "module.vpc.aws_route_table_association.public_rta_east",
            "module.vpc.aws_route_table_association.public_rta_west",
            "module.vpc.aws_subnet.subnet_east",
            "module.vpc.aws_subnet.subnet_west",
            "module.vpc.aws_vpc.vpc_east",
            "module.vpc.aws_vpc.vpc_west"
          ]
        }
      ]
    },
    {
      "module": "module.tgw",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table",
      "name": "tgw_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].delegated_account_us-west-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:980104576742:transit-gateway-route-table/tgw-rtb-081cb7c577fd302f1",
            "default_association_route_table": false,
            "default_propagation_route_table": false,
            "id": "tgw-rtb-081cb7c577fd302f1",
            "tags": {
              "Environment": "shared",
              "ManagedBy": "terraform",
              "Name": "delegated-account-tgw-rt"
            },
            "tags_all": {
              "Environment": "shared",
              "ManagedBy": "terraform",
              "Name": "delegated-account-tgw-rt"
            },
            "transit_gateway_id": "tgw-0092d8da5586c9000"
          },
          "dependencies": [
            "module.ipam.aws_ram_principal_association.ipam_account_principal",
            "module.ipam.aws_ram_resource_association.ipam_pool_associations",
            "module.ipam.aws_ram_resource_share.ipam_share",
            "module.ipam.aws_vpc_ipam.main_ipam",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region2",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region1",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region2",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region2",
            "module.ipam.aws_vpc_ipam_scope.private_scope",
            "module.tgw.aws_ec2_transit_gateway.tgw",
            "module.vpc.aws_eip.nat_eip_east",
            "module.vpc.aws_eip.nat_eip_west",
            "module.vpc.aws_internet_gateway.igw_east",
            "module.vpc.aws_internet_gateway.igw_west",
            "module.vpc.aws_nat_gateway.nat_gw_east",
            "module.vpc.aws_nat_gateway.nat_gw_west",
            "module.vpc.aws_route_table.private_rt_east",
            "module.vpc.aws_route_table.private_rt_west",
            "module.vpc.aws_route_table.public_rt_east",
            "module.vpc.aws_route_table.public_rt_west",
            "module.vpc.aws_route_table_association.private_rta_east",
            "module.vpc.aws_route_table_association.private_rta_west",
            "module.vpc.aws_route_table_association.public_rta_east",
            "module.vpc.aws_route_table_association.public_rta_west",
            "module.vpc.aws_subnet.subnet_east",
            "module.vpc.aws_subnet.subnet_west",
            "module.vpc.aws_vpc.vpc_east",
            "module.vpc.aws_vpc.vpc_west"
          ]
        }
      ]
    },
    {
      "module": "module.tgw",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table",
      "name": "tgw_rt_east",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].delegated_account_us-east-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:980104576742:transit-gateway-route-table/tgw-rtb-0d04c8d32e1cad85d",
            "default_association_route_table": false,
            "default_propagation_route_table": false,
            "id": "tgw-rtb-0d04c8d32e1cad85d",
            "tags": {
              "Environment": "shared",
              "ManagedBy": "terraform",
              "Name": "delegated-account-tgw-east-rt"
            },
            "tags_all": {
              "Environment": "shared",
              "ManagedBy": "terraform",
              "Name": "delegated-account-tgw-east-rt"
            },
            "transit_gateway_id": "tgw-0a2bbcb50043ff377"
          },
          "dependencies": [
            "module.ipam.aws_ram_principal_association.ipam_account_principal",
            "module.ipam.aws_ram_resource_association.ipam_pool_associations",
            "module.ipam.aws_ram_resource_share.ipam_share",
            "module.ipam.aws_vpc_ipam.main_ipam",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region2",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region1",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region2",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region2",
            "module.ipam.aws_vpc_ipam_scope.private_scope",
            "module.tgw.aws_ec2_transit_gateway.tgw_east",
            "module.vpc.aws_eip.nat_eip_east",
            "module.vpc.aws_eip.nat_eip_west",
            "module.vpc.aws_internet_gateway.igw_east",
            "module.vpc.aws_internet_gateway.igw_west",
            "module.vpc.aws_nat_gateway.nat_gw_east",
            "module.vpc.aws_nat_gateway.nat_gw_west",
            "module.vpc.aws_route_table.private_rt_east",
            "module.vpc.aws_route_table.private_rt_west",
            "module.vpc.aws_route_table.public_rt_east",
            "module.vpc.aws_route_table.public_rt_west",
            "module.vpc.aws_route_table_association.private_rta_east",
            "module.vpc.aws_route_table_association.private_rta_west",
            "module.vpc.aws_route_table_association.public_rta_east",
            "module.vpc.aws_route_table_association.public_rta_west",
            "module.vpc.aws_subnet.subnet_east",
            "module.vpc.aws_subnet.subnet_west",
            "module.vpc.aws_vpc.vpc_east",
            "module.vpc.aws_vpc.vpc_west"
          ]
        }
      ]
    },
    {
      "module": "module.tgw",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_propagation",
      "name": "east_to_tgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].delegated_account_us-east-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-0d04c8d32e1cad85d_tgw-attach-0b6de39d87e37de94",
            "resource_id": "vpc-068557505a94129b8",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-0b6de39d87e37de94",
            "transit_gateway_route_table_id": "tgw-rtb-0d04c8d32e1cad85d"
          },
          "dependencies": [
            "module.ipam.aws_ram_principal_association.ipam_account_principal",
            "module.ipam.aws_ram_resource_association.ipam_pool_associations",
            "module.ipam.aws_ram_resource_share.ipam_share",
            "module.ipam.aws_vpc_ipam.main_ipam",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region2",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region1",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region2",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region2",
            "module.ipam.aws_vpc_ipam_scope.private_scope",
            "module.tgw.aws_ec2_transit_gateway.tgw_east",
            "module.tgw.aws_ec2_transit_gateway_route_table.tgw_rt_east",
            "module.tgw.aws_ec2_transit_gateway_vpc_attachment.vpc_east_attachment",
            "module.vpc.aws_eip.nat_eip_east",
            "module.vpc.aws_eip.nat_eip_west",
            "module.vpc.aws_internet_gateway.igw_east",
            "module.vpc.aws_internet_gateway.igw_west",
            "module.vpc.aws_nat_gateway.nat_gw_east",
            "module.vpc.aws_nat_gateway.nat_gw_west",
            "module.vpc.aws_route_table.private_rt_east",
            "module.vpc.aws_route_table.private_rt_west",
            "module.vpc.aws_route_table.public_rt_east",
            "module.vpc.aws_route_table.public_rt_west",
            "module.vpc.aws_route_table_association.private_rta_east",
            "module.vpc.aws_route_table_association.private_rta_west",
            "module.vpc.aws_route_table_association.public_rta_east",
            "module.vpc.aws_route_table_association.public_rta_west",
            "module.vpc.aws_subnet.subnet_east",
            "module.vpc.aws_subnet.subnet_west",
            "module.vpc.aws_vpc.vpc_east",
            "module.vpc.aws_vpc.vpc_west"
          ]
        }
      ]
    },
    {
      "module": "module.tgw",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_propagation",
      "name": "west_to_tgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].delegated_account_us-west-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-081cb7c577fd302f1_tgw-attach-0940c9dac0f16887a",
            "resource_id": "vpc-0fda9e5298b978c68",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-0940c9dac0f16887a",
            "transit_gateway_route_table_id": "tgw-rtb-081cb7c577fd302f1"
          },
          "dependencies": [
            "module.ipam.aws_ram_principal_association.ipam_account_principal",
            "module.ipam.aws_ram_resource_association.ipam_pool_associations",
            "module.ipam.aws_ram_resource_share.ipam_share",
            "module.ipam.aws_vpc_ipam.main_ipam",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region2",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region1",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region2",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region2",
            "module.ipam.aws_vpc_ipam_scope.private_scope",
            "module.tgw.aws_ec2_transit_gateway.tgw",
            "module.tgw.aws_ec2_transit_gateway_route_table.tgw_rt",
            "module.tgw.aws_ec2_transit_gateway_vpc_attachment.vpc_west_attachment",
            "module.vpc.aws_eip.nat_eip_east",
            "module.vpc.aws_eip.nat_eip_west",
            "module.vpc.aws_internet_gateway.igw_east",
            "module.vpc.aws_internet_gateway.igw_west",
            "module.vpc.aws_nat_gateway.nat_gw_east",
            "module.vpc.aws_nat_gateway.nat_gw_west",
            "module.vpc.aws_route_table.private_rt_east",
            "module.vpc.aws_route_table.private_rt_west",
            "module.vpc.aws_route_table.public_rt_east",
            "module.vpc.aws_route_table.public_rt_west",
            "module.vpc.aws_route_table_association.private_rta_east",
            "module.vpc.aws_route_table_association.private_rta_west",
            "module.vpc.aws_route_table_association.public_rta_east",
            "module.vpc.aws_route_table_association.public_rta_west",
            "module.vpc.aws_subnet.subnet_east",
            "module.vpc.aws_subnet.subnet_west",
            "module.vpc.aws_vpc.vpc_east",
            "module.vpc.aws_vpc.vpc_west"
          ]
        }
      ]
    },
    {
      "module": "module.tgw",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "vpc_east_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].delegated_account_us-east-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-0b6de39d87e37de94",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-030c2749d7896d953",
              "subnet-08ab6b53e6bac36d3"
            ],
            "tags": {
              "Environment": "Non-Production",
              "ManagedBy": "terraform",
              "Name": "nonproduction-vpc-tgw-attachment"
            },
            "tags_all": {
              "Environment": "Non-Production",
              "ManagedBy": "terraform",
              "Name": "nonproduction-vpc-tgw-attachment"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-0a2bbcb50043ff377",
            "vpc_id": "vpc-068557505a94129b8",
            "vpc_owner_id": "980104576742"
          },
          "dependencies": [
            "module.ipam.aws_ram_principal_association.ipam_account_principal",
            "module.ipam.aws_ram_resource_association.ipam_pool_associations",
            "module.ipam.aws_ram_resource_share.ipam_share",
            "module.ipam.aws_vpc_ipam.main_ipam",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region2",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region1",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region2",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region2",
            "module.ipam.aws_vpc_ipam_scope.private_scope",
            "module.tgw.aws_ec2_transit_gateway.tgw_east",
            "module.vpc.aws_eip.nat_eip_east",
            "module.vpc.aws_eip.nat_eip_west",
            "module.vpc.aws_internet_gateway.igw_east",
            "module.vpc.aws_internet_gateway.igw_west",
            "module.vpc.aws_nat_gateway.nat_gw_east",
            "module.vpc.aws_nat_gateway.nat_gw_west",
            "module.vpc.aws_route_table.private_rt_east",
            "module.vpc.aws_route_table.private_rt_west",
            "module.vpc.aws_route_table.public_rt_east",
            "module.vpc.aws_route_table.public_rt_west",
            "module.vpc.aws_route_table_association.private_rta_east",
            "module.vpc.aws_route_table_association.private_rta_west",
            "module.vpc.aws_route_table_association.public_rta_east",
            "module.vpc.aws_route_table_association.public_rta_west",
            "module.vpc.aws_subnet.subnet_east",
            "module.vpc.aws_subnet.subnet_west",
            "module.vpc.aws_vpc.vpc_east",
            "module.vpc.aws_vpc.vpc_west"
          ]
        }
      ]
    },
    {
      "module": "module.tgw",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "vpc_west_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].delegated_account_us-west-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-0940c9dac0f16887a",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-031df935654b4d8bd",
              "subnet-0a980cd13e5e64b2c"
            ],
            "tags": {
              "Environment": "Production",
              "ManagedBy": "terraform",
              "Name": "production-vpc-tgw-attachment"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "terraform",
              "Name": "production-vpc-tgw-attachment"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-0092d8da5586c9000",
            "vpc_id": "vpc-0fda9e5298b978c68",
            "vpc_owner_id": "980104576742"
          },
          "dependencies": [
            "module.ipam.aws_ram_principal_association.ipam_account_principal",
            "module.ipam.aws_ram_resource_association.ipam_pool_associations",
            "module.ipam.aws_ram_resource_share.ipam_share",
            "module.ipam.aws_vpc_ipam.main_ipam",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region2",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region1",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region2",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region2",
            "module.ipam.aws_vpc_ipam_scope.private_scope",
            "module.tgw.aws_ec2_transit_gateway.tgw",
            "module.vpc.aws_eip.nat_eip_east",
            "module.vpc.aws_eip.nat_eip_west",
            "module.vpc.aws_internet_gateway.igw_east",
            "module.vpc.aws_internet_gateway.igw_west",
            "module.vpc.aws_nat_gateway.nat_gw_east",
            "module.vpc.aws_nat_gateway.nat_gw_west",
            "module.vpc.aws_route_table.private_rt_east",
            "module.vpc.aws_route_table.private_rt_west",
            "module.vpc.aws_route_table.public_rt_east",
            "module.vpc.aws_route_table.public_rt_west",
            "module.vpc.aws_route_table_association.private_rta_east",
            "module.vpc.aws_route_table_association.private_rta_west",
            "module.vpc.aws_route_table_association.public_rta_east",
            "module.vpc.aws_route_table_association.public_rta_west",
            "module.vpc.aws_subnet.subnet_east",
            "module.vpc.aws_subnet.subnet_west",
            "module.vpc.aws_vpc.vpc_east",
            "module.vpc.aws_vpc.vpc_west"
          ]
        }
      ]
    },
    {
      "module": "module.tgw",
      "mode": "managed",
      "type": "aws_route",
      "name": "east_private_to_west",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].delegated_account_us-east-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.24.0/21",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b4f0c4850d77373e3994597727",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b4f0c4850d77373e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-0a2bbcb50043ff377",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ipam.aws_ram_principal_association.ipam_account_principal",
            "module.ipam.aws_ram_resource_association.ipam_pool_associations",
            "module.ipam.aws_ram_resource_share.ipam_share",
            "module.ipam.aws_vpc_ipam.main_ipam",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region2",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region1",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region2",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region2",
            "module.ipam.aws_vpc_ipam_scope.private_scope",
            "module.tgw.aws_ec2_transit_gateway.tgw_east",
            "module.vpc.aws_eip.nat_eip_east",
            "module.vpc.aws_eip.nat_eip_west",
            "module.vpc.aws_internet_gateway.igw_east",
            "module.vpc.aws_internet_gateway.igw_west",
            "module.vpc.aws_nat_gateway.nat_gw_east",
            "module.vpc.aws_nat_gateway.nat_gw_west",
            "module.vpc.aws_route_table.private_rt_east",
            "module.vpc.aws_route_table.private_rt_west",
            "module.vpc.aws_route_table.public_rt_east",
            "module.vpc.aws_route_table.public_rt_west",
            "module.vpc.aws_route_table_association.private_rta_east",
            "module.vpc.aws_route_table_association.private_rta_west",
            "module.vpc.aws_route_table_association.public_rta_east",
            "module.vpc.aws_route_table_association.public_rta_west",
            "module.vpc.aws_subnet.subnet_east",
            "module.vpc.aws_subnet.subnet_west",
            "module.vpc.aws_vpc.vpc_east",
            "module.vpc.aws_vpc.vpc_west"
          ]
        }
      ]
    },
    {
      "module": "module.tgw",
      "mode": "managed",
      "type": "aws_route",
      "name": "east_public_to_west",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].delegated_account_us-east-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.24.0/21",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03cb6cc7c9f5ee5163994597727",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03cb6cc7c9f5ee516",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-0a2bbcb50043ff377",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ipam.aws_ram_principal_association.ipam_account_principal",
            "module.ipam.aws_ram_resource_association.ipam_pool_associations",
            "module.ipam.aws_ram_resource_share.ipam_share",
            "module.ipam.aws_vpc_ipam.main_ipam",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region2",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region1",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region2",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region2",
            "module.ipam.aws_vpc_ipam_scope.private_scope",
            "module.tgw.aws_ec2_transit_gateway.tgw_east",
            "module.vpc.aws_eip.nat_eip_east",
            "module.vpc.aws_eip.nat_eip_west",
            "module.vpc.aws_internet_gateway.igw_east",
            "module.vpc.aws_internet_gateway.igw_west",
            "module.vpc.aws_nat_gateway.nat_gw_east",
            "module.vpc.aws_nat_gateway.nat_gw_west",
            "module.vpc.aws_route_table.private_rt_east",
            "module.vpc.aws_route_table.private_rt_west",
            "module.vpc.aws_route_table.public_rt_east",
            "module.vpc.aws_route_table.public_rt_west",
            "module.vpc.aws_route_table_association.private_rta_east",
            "module.vpc.aws_route_table_association.private_rta_west",
            "module.vpc.aws_route_table_association.public_rta_east",
            "module.vpc.aws_route_table_association.public_rta_west",
            "module.vpc.aws_subnet.subnet_east",
            "module.vpc.aws_subnet.subnet_west",
            "module.vpc.aws_vpc.vpc_east",
            "module.vpc.aws_vpc.vpc_west"
          ]
        }
      ]
    },
    {
      "module": "module.tgw",
      "mode": "managed",
      "type": "aws_route",
      "name": "west_private_to_east",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].delegated_account_us-west-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.1.144.0/21",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0192e3884eeef15e31402993537",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0192e3884eeef15e3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-0092d8da5586c9000",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ipam.aws_ram_principal_association.ipam_account_principal",
            "module.ipam.aws_ram_resource_association.ipam_pool_associations",
            "module.ipam.aws_ram_resource_share.ipam_share",
            "module.ipam.aws_vpc_ipam.main_ipam",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region2",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region1",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region2",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region2",
            "module.ipam.aws_vpc_ipam_scope.private_scope",
            "module.tgw.aws_ec2_transit_gateway.tgw",
            "module.vpc.aws_eip.nat_eip_east",
            "module.vpc.aws_eip.nat_eip_west",
            "module.vpc.aws_internet_gateway.igw_east",
            "module.vpc.aws_internet_gateway.igw_west",
            "module.vpc.aws_nat_gateway.nat_gw_east",
            "module.vpc.aws_nat_gateway.nat_gw_west",
            "module.vpc.aws_route_table.private_rt_east",
            "module.vpc.aws_route_table.private_rt_west",
            "module.vpc.aws_route_table.public_rt_east",
            "module.vpc.aws_route_table.public_rt_west",
            "module.vpc.aws_route_table_association.private_rta_east",
            "module.vpc.aws_route_table_association.private_rta_west",
            "module.vpc.aws_route_table_association.public_rta_east",
            "module.vpc.aws_route_table_association.public_rta_west",
            "module.vpc.aws_subnet.subnet_east",
            "module.vpc.aws_subnet.subnet_west",
            "module.vpc.aws_vpc.vpc_east",
            "module.vpc.aws_vpc.vpc_west"
          ]
        }
      ]
    },
    {
      "module": "module.tgw",
      "mode": "managed",
      "type": "aws_route",
      "name": "west_public_to_east",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].delegated_account_us-west-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.1.144.0/21",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0987ebdc1cb4256da1402993537",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0987ebdc1cb4256da",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-0092d8da5586c9000",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ipam.aws_ram_principal_association.ipam_account_principal",
            "module.ipam.aws_ram_resource_association.ipam_pool_associations",
            "module.ipam.aws_ram_resource_share.ipam_share",
            "module.ipam.aws_vpc_ipam.main_ipam",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region2",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region1",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region2",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region2",
            "module.ipam.aws_vpc_ipam_scope.private_scope",
            "module.tgw.aws_ec2_transit_gateway.tgw",
            "module.vpc.aws_eip.nat_eip_east",
            "module.vpc.aws_eip.nat_eip_west",
            "module.vpc.aws_internet_gateway.igw_east",
            "module.vpc.aws_internet_gateway.igw_west",
            "module.vpc.aws_nat_gateway.nat_gw_east",
            "module.vpc.aws_nat_gateway.nat_gw_west",
            "module.vpc.aws_route_table.private_rt_east",
            "module.vpc.aws_route_table.private_rt_west",
            "module.vpc.aws_route_table.public_rt_east",
            "module.vpc.aws_route_table.public_rt_west",
            "module.vpc.aws_route_table_association.private_rta_east",
            "module.vpc.aws_route_table_association.private_rta_west",
            "module.vpc.aws_route_table_association.public_rta_east",
            "module.vpc.aws_route_table_association.public_rta_west",
            "module.vpc.aws_subnet.subnet_east",
            "module.vpc.aws_subnet.subnet_west",
            "module.vpc.aws_vpc.vpc_east",
            "module.vpc.aws_vpc.vpc_west"
          ]
        }
      ]
    },
    {
      "module": "module.tgw",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "east_test_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].delegated_account_us-east-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:980104576742:security-group/sg-0d925b9594ad1bda5",
            "description": "Security group for testing TGW connectivity",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d925b9594ad1bda5",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.24.0/21"
                ],
                "description": "Allow ping from west VPC",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "66.98.96.0/20"
                ],
                "description": "Allow SSH from RSM VPN",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "east-test-sg",
            "name_prefix": "",
            "owner_id": "980104576742",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-068557505a94129b8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ipam.aws_ram_principal_association.ipam_account_principal",
            "module.ipam.aws_ram_resource_association.ipam_pool_associations",
            "module.ipam.aws_ram_resource_share.ipam_share",
            "module.ipam.aws_vpc_ipam.main_ipam",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region2",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region1",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region2",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region2",
            "module.ipam.aws_vpc_ipam_scope.private_scope",
            "module.vpc.aws_eip.nat_eip_east",
            "module.vpc.aws_eip.nat_eip_west",
            "module.vpc.aws_internet_gateway.igw_east",
            "module.vpc.aws_internet_gateway.igw_west",
            "module.vpc.aws_nat_gateway.nat_gw_east",
            "module.vpc.aws_nat_gateway.nat_gw_west",
            "module.vpc.aws_route_table.private_rt_east",
            "module.vpc.aws_route_table.private_rt_west",
            "module.vpc.aws_route_table.public_rt_east",
            "module.vpc.aws_route_table.public_rt_west",
            "module.vpc.aws_route_table_association.private_rta_east",
            "module.vpc.aws_route_table_association.private_rta_west",
            "module.vpc.aws_route_table_association.public_rta_east",
            "module.vpc.aws_route_table_association.public_rta_west",
            "module.vpc.aws_subnet.subnet_east",
            "module.vpc.aws_subnet.subnet_west",
            "module.vpc.aws_vpc.vpc_east",
            "module.vpc.aws_vpc.vpc_west"
          ]
        }
      ]
    },
    {
      "module": "module.tgw",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "west_test_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].delegated_account_us-west-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:980104576742:security-group/sg-0b02e88e69c265376",
            "description": "Security group for testing TGW connectivity",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b02e88e69c265376",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.1.144.0/21"
                ],
                "description": "Allow ping from east VPC",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "66.98.96.0/20"
                ],
                "description": "Allow SSH from RSM VPN",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "west-test-sg",
            "name_prefix": "",
            "owner_id": "980104576742",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0fda9e5298b978c68"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ipam.aws_ram_principal_association.ipam_account_principal",
            "module.ipam.aws_ram_resource_association.ipam_pool_associations",
            "module.ipam.aws_ram_resource_share.ipam_share",
            "module.ipam.aws_vpc_ipam.main_ipam",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region2",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region1",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region2",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region2",
            "module.ipam.aws_vpc_ipam_scope.private_scope",
            "module.vpc.aws_eip.nat_eip_east",
            "module.vpc.aws_eip.nat_eip_west",
            "module.vpc.aws_internet_gateway.igw_east",
            "module.vpc.aws_internet_gateway.igw_west",
            "module.vpc.aws_nat_gateway.nat_gw_east",
            "module.vpc.aws_nat_gateway.nat_gw_west",
            "module.vpc.aws_route_table.private_rt_east",
            "module.vpc.aws_route_table.private_rt_west",
            "module.vpc.aws_route_table.public_rt_east",
            "module.vpc.aws_route_table.public_rt_west",
            "module.vpc.aws_route_table_association.private_rta_east",
            "module.vpc.aws_route_table_association.private_rta_west",
            "module.vpc.aws_route_table_association.public_rta_east",
            "module.vpc.aws_route_table_association.public_rta_west",
            "module.vpc.aws_subnet.subnet_east",
            "module.vpc.aws_subnet.subnet_west",
            "module.vpc.aws_vpc.vpc_east",
            "module.vpc.aws_vpc.vpc_west"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip_east",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].delegated_account_us-east-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cf69bf06ee19f06f",
            "arn": "arn:aws:ec2:us-east-1:980104576742:elastic-ip/eipalloc-0cf69bf06ee19f06f",
            "association_id": "eipassoc-0068612376f594cdc",
            "domain": "vpc",
            "id": "eipalloc-0cf69bf06ee19f06f",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0647e9cbfe1d58546",
            "private_dns": "ip-10-1-144-166.ec2.internal",
            "private_ip": "10.1.144.166",
            "public_dns": "ec2-34-237-173-201.compute-1.amazonaws.com",
            "public_ip": "34.237.173.201",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "NonProduction",
              "Name": "nonproduction-vpc-nat-eip"
            },
            "tags_all": {
              "Environment": "NonProduction",
              "Name": "nonproduction-vpc-nat-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "module.ipam.aws_ram_principal_association.ipam_account_principal",
            "module.ipam.aws_ram_resource_association.ipam_pool_associations",
            "module.ipam.aws_ram_resource_share.ipam_share",
            "module.ipam.aws_vpc_ipam.main_ipam",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region2",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region1",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region2",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region2",
            "module.ipam.aws_vpc_ipam_scope.private_scope"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip_west",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].delegated_account_us-west-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ecc4afcc1f5ef19f",
            "arn": "arn:aws:ec2:us-west-2:980104576742:elastic-ip/eipalloc-0ecc4afcc1f5ef19f",
            "association_id": "eipassoc-04da09bc0bdf44ffc",
            "domain": "vpc",
            "id": "eipalloc-0ecc4afcc1f5ef19f",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0ef6b55e823a8028d",
            "private_dns": "ip-10-0-24-109.us-west-2.compute.internal",
            "private_ip": "10.0.24.109",
            "public_dns": "ec2-35-162-3-135.us-west-2.compute.amazonaws.com",
            "public_ip": "35.162.3.135",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "Production",
              "Name": "production-vpc-nat-eip"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "production-vpc-nat-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "module.ipam.aws_ram_principal_association.ipam_account_principal",
            "module.ipam.aws_ram_resource_association.ipam_pool_associations",
            "module.ipam.aws_ram_resource_share.ipam_share",
            "module.ipam.aws_vpc_ipam.main_ipam",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region2",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region1",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region2",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region2",
            "module.ipam.aws_vpc_ipam_scope.private_scope"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_east",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].delegated_account_us-east-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:980104576742:internet-gateway/igw-0d9041ad33ac50501",
            "id": "igw-0d9041ad33ac50501",
            "owner_id": "980104576742",
            "tags": {
              "Environment": "NonProduction",
              "Name": "nonproduction-vpc-igw"
            },
            "tags_all": {
              "Environment": "NonProduction",
              "Name": "nonproduction-vpc-igw"
            },
            "vpc_id": "vpc-068557505a94129b8"
          },
          "dependencies": [
            "module.ipam.aws_ram_principal_association.ipam_account_principal",
            "module.ipam.aws_ram_resource_association.ipam_pool_associations",
            "module.ipam.aws_ram_resource_share.ipam_share",
            "module.ipam.aws_vpc_ipam.main_ipam",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region2",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region1",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region2",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region2",
            "module.ipam.aws_vpc_ipam_scope.private_scope",
            "module.vpc.aws_vpc.vpc_east"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_west",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].delegated_account_us-west-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:980104576742:internet-gateway/igw-09a05a41fdd3eaeab",
            "id": "igw-09a05a41fdd3eaeab",
            "owner_id": "980104576742",
            "tags": {
              "Environment": "Production",
              "Name": "production-vpc-igw"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "production-vpc-igw"
            },
            "vpc_id": "vpc-0fda9e5298b978c68"
          },
          "dependencies": [
            "module.ipam.aws_ram_principal_association.ipam_account_principal",
            "module.ipam.aws_ram_resource_association.ipam_pool_associations",
            "module.ipam.aws_ram_resource_share.ipam_share",
            "module.ipam.aws_vpc_ipam.main_ipam",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region2",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region1",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region2",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region2",
            "module.ipam.aws_vpc_ipam_scope.private_scope",
            "module.vpc.aws_vpc.vpc_west"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw_east",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].delegated_account_us-east-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cf69bf06ee19f06f",
            "association_id": "eipassoc-0068612376f594cdc",
            "connectivity_type": "public",
            "id": "nat-0e0c106afad778ffa",
            "network_interface_id": "eni-0647e9cbfe1d58546",
            "private_ip": "10.1.144.166",
            "public_ip": "34.237.173.201",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08ab6b53e6bac36d3",
            "tags": {
              "Environment": "NonProduction",
              "Name": "nonproduction-vpc-nat-gw"
            },
            "tags_all": {
              "Environment": "NonProduction",
              "Name": "nonproduction-vpc-nat-gw"
            }
          },
          "dependencies": [
            "module.ipam.aws_ram_principal_association.ipam_account_principal",
            "module.ipam.aws_ram_resource_association.ipam_pool_associations",
            "module.ipam.aws_ram_resource_share.ipam_share",
            "module.ipam.aws_vpc_ipam.main_ipam",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region2",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region1",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region2",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region2",
            "module.ipam.aws_vpc_ipam_scope.private_scope",
            "module.vpc.aws_eip.nat_eip_east",
            "module.vpc.aws_internet_gateway.igw_east",
            "module.vpc.aws_subnet.subnet_east",
            "module.vpc.aws_vpc.vpc_east"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw_west",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].delegated_account_us-west-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ecc4afcc1f5ef19f",
            "association_id": "eipassoc-04da09bc0bdf44ffc",
            "connectivity_type": "public",
            "id": "nat-07730838708a2e1a3",
            "network_interface_id": "eni-0ef6b55e823a8028d",
            "private_ip": "10.0.24.109",
            "public_ip": "35.162.3.135",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a980cd13e5e64b2c",
            "tags": {
              "Environment": "Production",
              "Name": "production-vpc-nat-gw"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "production-vpc-nat-gw"
            }
          },
          "dependencies": [
            "module.ipam.aws_ram_principal_association.ipam_account_principal",
            "module.ipam.aws_ram_resource_association.ipam_pool_associations",
            "module.ipam.aws_ram_resource_share.ipam_share",
            "module.ipam.aws_vpc_ipam.main_ipam",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region2",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region1",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region2",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region2",
            "module.ipam.aws_vpc_ipam_scope.private_scope",
            "module.vpc.aws_eip.nat_eip_west",
            "module.vpc.aws_internet_gateway.igw_west",
            "module.vpc.aws_subnet.subnet_west",
            "module.vpc.aws_vpc.vpc_west"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt_east",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].delegated_account_us-east-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:980104576742:route-table/rtb-0b4f0c4850d77373e",
            "id": "rtb-0b4f0c4850d77373e",
            "owner_id": "980104576742",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e0c106afad778ffa",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.24.0/21",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0a2bbcb50043ff377",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "NonProduction",
              "Name": "nonproduction-vpc-private-rt"
            },
            "tags_all": {
              "Environment": "NonProduction",
              "Name": "nonproduction-vpc-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-068557505a94129b8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ipam.aws_ram_principal_association.ipam_account_principal",
            "module.ipam.aws_ram_resource_association.ipam_pool_associations",
            "module.ipam.aws_ram_resource_share.ipam_share",
            "module.ipam.aws_vpc_ipam.main_ipam",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region2",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region1",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region2",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region2",
            "module.ipam.aws_vpc_ipam_scope.private_scope",
            "module.vpc.aws_eip.nat_eip_east",
            "module.vpc.aws_internet_gateway.igw_east",
            "module.vpc.aws_nat_gateway.nat_gw_east",
            "module.vpc.aws_subnet.subnet_east",
            "module.vpc.aws_vpc.vpc_east"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt_west",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].delegated_account_us-west-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:980104576742:route-table/rtb-0192e3884eeef15e3",
            "id": "rtb-0192e3884eeef15e3",
            "owner_id": "980104576742",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07730838708a2e1a3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.1.144.0/21",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0092d8da5586c9000",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Production",
              "Name": "production-vpc-private-rt"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "production-vpc-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fda9e5298b978c68"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ipam.aws_ram_principal_association.ipam_account_principal",
            "module.ipam.aws_ram_resource_association.ipam_pool_associations",
            "module.ipam.aws_ram_resource_share.ipam_share",
            "module.ipam.aws_vpc_ipam.main_ipam",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region2",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region1",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region2",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region2",
            "module.ipam.aws_vpc_ipam_scope.private_scope",
            "module.vpc.aws_eip.nat_eip_west",
            "module.vpc.aws_internet_gateway.igw_west",
            "module.vpc.aws_nat_gateway.nat_gw_west",
            "module.vpc.aws_subnet.subnet_west",
            "module.vpc.aws_vpc.vpc_west"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt_east",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].delegated_account_us-east-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:980104576742:route-table/rtb-03cb6cc7c9f5ee516",
            "id": "rtb-03cb6cc7c9f5ee516",
            "owner_id": "980104576742",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d9041ad33ac50501",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.24.0/21",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0a2bbcb50043ff377",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "NonProduction",
              "Name": "nonproduction-vpc-public-rt"
            },
            "tags_all": {
              "Environment": "NonProduction",
              "Name": "nonproduction-vpc-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-068557505a94129b8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ipam.aws_ram_principal_association.ipam_account_principal",
            "module.ipam.aws_ram_resource_association.ipam_pool_associations",
            "module.ipam.aws_ram_resource_share.ipam_share",
            "module.ipam.aws_vpc_ipam.main_ipam",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region2",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region1",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region2",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region2",
            "module.ipam.aws_vpc_ipam_scope.private_scope",
            "module.vpc.aws_internet_gateway.igw_east",
            "module.vpc.aws_vpc.vpc_east"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt_west",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].delegated_account_us-west-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:980104576742:route-table/rtb-0987ebdc1cb4256da",
            "id": "rtb-0987ebdc1cb4256da",
            "owner_id": "980104576742",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09a05a41fdd3eaeab",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.1.144.0/21",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0092d8da5586c9000",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Production",
              "Name": "production-vpc-public-rt"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "production-vpc-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fda9e5298b978c68"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ipam.aws_ram_principal_association.ipam_account_principal",
            "module.ipam.aws_ram_resource_association.ipam_pool_associations",
            "module.ipam.aws_ram_resource_share.ipam_share",
            "module.ipam.aws_vpc_ipam.main_ipam",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region2",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region1",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region2",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region2",
            "module.ipam.aws_vpc_ipam_scope.private_scope",
            "module.vpc.aws_internet_gateway.igw_west",
            "module.vpc.aws_vpc.vpc_west"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rta_east",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].delegated_account_us-east-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f8fa8d2efb587236",
            "route_table_id": "rtb-0b4f0c4850d77373e",
            "subnet_id": "subnet-030c2749d7896d953"
          },
          "dependencies": [
            "module.ipam.aws_ram_principal_association.ipam_account_principal",
            "module.ipam.aws_ram_resource_association.ipam_pool_associations",
            "module.ipam.aws_ram_resource_share.ipam_share",
            "module.ipam.aws_vpc_ipam.main_ipam",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region2",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region1",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region2",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region2",
            "module.ipam.aws_vpc_ipam_scope.private_scope",
            "module.vpc.aws_eip.nat_eip_east",
            "module.vpc.aws_internet_gateway.igw_east",
            "module.vpc.aws_nat_gateway.nat_gw_east",
            "module.vpc.aws_route_table.private_rt_east",
            "module.vpc.aws_subnet.subnet_east",
            "module.vpc.aws_vpc.vpc_east"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rta_west",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].delegated_account_us-west-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0019b47b7bffff11f",
            "route_table_id": "rtb-0192e3884eeef15e3",
            "subnet_id": "subnet-031df935654b4d8bd"
          },
          "dependencies": [
            "module.ipam.aws_ram_principal_association.ipam_account_principal",
            "module.ipam.aws_ram_resource_association.ipam_pool_associations",
            "module.ipam.aws_ram_resource_share.ipam_share",
            "module.ipam.aws_vpc_ipam.main_ipam",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region2",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region1",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region2",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region2",
            "module.ipam.aws_vpc_ipam_scope.private_scope",
            "module.vpc.aws_eip.nat_eip_west",
            "module.vpc.aws_internet_gateway.igw_west",
            "module.vpc.aws_nat_gateway.nat_gw_west",
            "module.vpc.aws_route_table.private_rt_west",
            "module.vpc.aws_subnet.subnet_west",
            "module.vpc.aws_vpc.vpc_west"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rta_east",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].delegated_account_us-east-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a1ec4fd7dd8b0654",
            "route_table_id": "rtb-03cb6cc7c9f5ee516",
            "subnet_id": "subnet-08ab6b53e6bac36d3"
          },
          "dependencies": [
            "module.ipam.aws_ram_principal_association.ipam_account_principal",
            "module.ipam.aws_ram_resource_association.ipam_pool_associations",
            "module.ipam.aws_ram_resource_share.ipam_share",
            "module.ipam.aws_vpc_ipam.main_ipam",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region2",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region1",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region2",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region2",
            "module.ipam.aws_vpc_ipam_scope.private_scope",
            "module.vpc.aws_internet_gateway.igw_east",
            "module.vpc.aws_route_table.public_rt_east",
            "module.vpc.aws_subnet.subnet_east",
            "module.vpc.aws_vpc.vpc_east"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rta_west",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].delegated_account_us-west-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c61ad66956feda5a",
            "route_table_id": "rtb-0987ebdc1cb4256da",
            "subnet_id": "subnet-0a980cd13e5e64b2c"
          },
          "dependencies": [
            "module.ipam.aws_ram_principal_association.ipam_account_principal",
            "module.ipam.aws_ram_resource_association.ipam_pool_associations",
            "module.ipam.aws_ram_resource_share.ipam_share",
            "module.ipam.aws_vpc_ipam.main_ipam",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region2",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region1",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region2",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region2",
            "module.ipam.aws_vpc_ipam_scope.private_scope",
            "module.vpc.aws_internet_gateway.igw_west",
            "module.vpc.aws_route_table.public_rt_west",
            "module.vpc.aws_subnet.subnet_west",
            "module.vpc.aws_vpc.vpc_west"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_east",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].delegated_account_us-east-1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:980104576742:subnet/subnet-08ab6b53e6bac36d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.144.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08ab6b53e6bac36d3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "980104576742",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "NonProduction",
              "Name": "nonprod-subnet-1"
            },
            "tags_all": {
              "Environment": "NonProduction",
              "Name": "nonprod-subnet-1"
            },
            "vpc_id": "vpc-068557505a94129b8"
          },
          "dependencies": [
            "module.ipam.aws_ram_principal_association.ipam_account_principal",
            "module.ipam.aws_ram_resource_association.ipam_pool_associations",
            "module.ipam.aws_ram_resource_share.ipam_share",
            "module.ipam.aws_vpc_ipam.main_ipam",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region2",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region1",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region2",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region2",
            "module.ipam.aws_vpc_ipam_scope.private_scope",
            "module.vpc.aws_vpc.vpc_east"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:980104576742:subnet/subnet-030c2749d7896d953",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.145.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-030c2749d7896d953",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "980104576742",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "NonProduction",
              "Name": "nonprod-subnet-2"
            },
            "tags_all": {
              "Environment": "NonProduction",
              "Name": "nonprod-subnet-2"
            },
            "vpc_id": "vpc-068557505a94129b8"
          },
          "dependencies": [
            "module.ipam.aws_ram_principal_association.ipam_account_principal",
            "module.ipam.aws_ram_resource_association.ipam_pool_associations",
            "module.ipam.aws_ram_resource_share.ipam_share",
            "module.ipam.aws_vpc_ipam.main_ipam",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region2",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region1",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region2",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region2",
            "module.ipam.aws_vpc_ipam_scope.private_scope",
            "module.vpc.aws_vpc.vpc_east"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_west",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].delegated_account_us-west-2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:980104576742:subnet/subnet-0a980cd13e5e64b2c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.24.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a980cd13e5e64b2c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "980104576742",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Production",
              "Name": "prod-subnet-1"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "prod-subnet-1"
            },
            "vpc_id": "vpc-0fda9e5298b978c68"
          },
          "dependencies": [
            "module.ipam.aws_ram_principal_association.ipam_account_principal",
            "module.ipam.aws_ram_resource_association.ipam_pool_associations",
            "module.ipam.aws_ram_resource_share.ipam_share",
            "module.ipam.aws_vpc_ipam.main_ipam",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region2",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region1",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region2",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region2",
            "module.ipam.aws_vpc_ipam_scope.private_scope",
            "module.vpc.aws_vpc.vpc_west"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:980104576742:subnet/subnet-031df935654b4d8bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.25.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-031df935654b4d8bd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "980104576742",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Production",
              "Name": "prod-subnet-2"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "prod-subnet-2"
            },
            "vpc_id": "vpc-0fda9e5298b978c68"
          },
          "dependencies": [
            "module.ipam.aws_ram_principal_association.ipam_account_principal",
            "module.ipam.aws_ram_resource_association.ipam_pool_associations",
            "module.ipam.aws_ram_resource_share.ipam_share",
            "module.ipam.aws_vpc_ipam.main_ipam",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region2",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region1",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region2",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region2",
            "module.ipam.aws_vpc_ipam_scope.private_scope",
            "module.vpc.aws_vpc.vpc_west"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_east",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].delegated_account_us-east-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:980104576742:vpc/vpc-068557505a94129b8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.144.0/21",
            "default_network_acl_id": "acl-0dab6dabd08ba503b",
            "default_route_table_id": "rtb-0cf5724ebbbb4019d",
            "default_security_group_id": "sg-0a90195a9cd25b4f1",
            "dhcp_options_id": "dopt-0663236c04df3ce2f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-068557505a94129b8",
            "instance_tenancy": "default",
            "ipv4_ipam_pool_id": "ipam-pool-02dc0cdfeea9cda6b",
            "ipv4_netmask_length": 21,
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cf5724ebbbb4019d",
            "owner_id": "980104576742",
            "tags": {
              "Environment": "NonProduction",
              "Name": "nonproduction-vpc"
            },
            "tags_all": {
              "Environment": "NonProduction",
              "Name": "nonproduction-vpc"
            }
          },
          "dependencies": [
            "module.ipam.aws_ram_principal_association.ipam_account_principal",
            "module.ipam.aws_ram_resource_association.ipam_pool_associations",
            "module.ipam.aws_ram_resource_share.ipam_share",
            "module.ipam.aws_vpc_ipam.main_ipam",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region2",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region1",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region2",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region2",
            "module.ipam.aws_vpc_ipam_scope.private_scope"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_west",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].delegated_account_us-west-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:980104576742:vpc/vpc-0fda9e5298b978c68",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.24.0/21",
            "default_network_acl_id": "acl-0f12ea00b719a69ca",
            "default_route_table_id": "rtb-04af9a8347002bc51",
            "default_security_group_id": "sg-0055adda7050cc557",
            "dhcp_options_id": "dopt-03aa8f85fd1cb199c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fda9e5298b978c68",
            "instance_tenancy": "default",
            "ipv4_ipam_pool_id": "ipam-pool-0a62c2c9c90b60cf9",
            "ipv4_netmask_length": 21,
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04af9a8347002bc51",
            "owner_id": "980104576742",
            "tags": {
              "Environment": "Production",
              "Name": "production-vpc"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "production-vpc"
            }
          },
          "dependencies": [
            "module.ipam.aws_ram_principal_association.ipam_account_principal",
            "module.ipam.aws_ram_resource_association.ipam_pool_associations",
            "module.ipam.aws_ram_resource_share.ipam_share",
            "module.ipam.aws_vpc_ipam.main_ipam",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.environment_pools_region2",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region1",
            "module.ipam.aws_vpc_ipam_pool.regional_pool_region2",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region1",
            "module.ipam.aws_vpc_ipam_pool.subnet_pools_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.environment_cidrs_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.regional_cidr_region2",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region1",
            "module.ipam.aws_vpc_ipam_pool_cidr.subnet_cidrs_region2",
            "module.ipam.aws_vpc_ipam_scope.private_scope"
          ]
        }
      ]
    }
  ]
}